# intro_ia

./: .gitignore  Clase 2 - kmeans.ipynb  CriteriosAprobacion.md  Datos_Ejemplo_Neo.txt  ENUNCIADO_TP_GRUPAL.md  README.md  env_anaconda_shareable.yml  kmeans.py  pyproject.toml  requirements.txt
clase1/: README.md
clase1/content/: README.md  jupyter_installation.md  modo_baby.md  modo_gore.md  modo_novato.md  module1.md
clase1/ejercicios/: 1 - Ejercicios Python.ipynb  4 - Ejercicios Pandas - Homeless.ipynb  5 - Ejercicios Pandas - Temperatura.ipynb  6 - Ejercicios Pandas - Aprender 2018.ipynb
clase1/jupyter_notebooks/: 1 - Primera Notebook.ipynb  10 - Graficando con Pandas.ipynb  2 - Usando Python.ipynb  3 - Usando Numpy.ipynb  5 - Usando Pandas - Introduccion.ipynb  6 - Usando Pandas - Combinando datos.ipynb  (+3 more)
clase2/: README.md
clase3/: README.md
clase4/: README.md
clase5/: README.md
clase6/: README.md
clase7/: README.md
clase_1/: README.md
clase_2/: README.md
clase_3/: README.md
clase_4/: README.md
clase_5/: README.md
clase_6/: README.md
clase_7/: README.md  link_clase7.txt
tp/: Plantilla_Trabajo_Practico_2.ipynb
tp_enunciado/: tp_integrador.ipynb
tp_integrador_enunciado/: template_tp_integrador_dataset.ipynb  template_tp_integrador_dataset_FabianBanderas.ipynb  tp_integrador.ipynb  tp_integrador_FabianBanderas.ipynb  tp_integrador_resuelto.ipynb  tpi_parte1 - Cristian Marino.ipynb  tpi_parte1.ipynb  tpi_parte2 - Cristian Marino.ipynb  tpi_parte2.ipynb  tpi_parte3.ipynb  tpi_parte4 - Cristian Marino.ipynb  tpi_parte4.ipynb
(+309 files in other folders)
