[tool.poetry]
name = "intro-ia"
version = "0.1.0"
description = ""
authors = ["Facundo Adrián Lucianna <facundolucianna@gmail.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.26.4"
pandas = "^2.2.2"
scipy = "^1.13.1"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
scikit-learn = "^1.5.0"
pygame = "^2.5.2"
vizdoom = "^1.2.3"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
